[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cloudinary>=1.41.0",
    "fastapi==0.115.13",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.11.7",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-json-logger==3.3.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]
